--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.crafttorch</groupId>
-    <artifactId>CTGui</artifactId>
-    <version>2.0</version>
+    <artifactId>HubGSelector</artifactId>
+    <version>3.0.1</version>
     <packaging>jar</packaging>
 
-    <name>CTGui</name>
+    <name>HubGSelector</name>
 
     <properties>
         <java.version>1.8</java.version>
